# justaskit-backend

./: db.sqlite3  manage.py  pyproject.toml
app/: models.py  serializers.py  urls.py  views.py
app/templates/: swagger.html
justaskit/: asgi.py  settings.py  urls.py  wsgi.py
