[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["mexane.delcroix <mexane.delcroix@epita.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
djangorestframework = "^3.14.0"
pyyaml = "^6.0"
uritemplate = "^4.1.1"
psycopg2-binary = "^2.9.5"
django-redis = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
